# Mobile_ML_Robot

./: .gitignore  IMG_6466.HEIC  README.md  Ros Docker Startup Guide from Nathan.docx  [RDJ 2024] Introduction to ROS .pptx  mobile-platfrom-navigation.pptx  plotForRoland.py  plot_receiver.py  plot_sender.py
CAD/: Full-Assembly.iam  Full-Assembly.ipn  bed-hinge.ipt  bed.ipt  bed_acrylic_assembly.iam  bed_acrylic_floor.ipt  bed_acrylic_lower_front.ipt  bed_acrylic_side.ipt  bed_acrylic_upper_floor.ipt  bed_acrylic_upper_front.ipt  bump-stop.ipt  camera-bracket-rib.ipt  camera-bracket.ipt  floor.ipt  frame.iam  gate-anchor-link.ipt  gate-pivot.ipt  gate-upper-link.ipt  gate.ipt  lower-back-plate-support.ipt  lower-front-plate-support.ipt  lower-mid-plate-support.ipt  lower-tipper-link.ipt  mainBoard.ipt  micro servo.ipt  mid-plate.ipt  power-bank-bump.ipt  power-bank.ipt  r-support.ipt  scissor-assembly.iam  scissor-link-upper.ipt  scissor-link.ipt  servo-arm.ipt  sheet-parts.idw  smooth-wheel.ipt  temp-bed.ipt  temp-pin.ipt  top-plate.ipt  upper-front-plate-support.ipt  upper-mid-plate-support.ipt  (+2 more)
CAD/RP-lidar-A1/: RP-lidar-A1.iam
CAD/bracket/: MOTA_SuporteJGA v3.ipt
CAD/cam/: DF37B-34DP-0.4V_51_ v1.ipt  DF37NB-34DS v1.ipt  RP2040 v3.ipt  SFW15R-1STE1LF--3DModel-STEP-510211 v1.iam  SFW8R-1STE1LF_SFW15R-1STE1LF.ipt  SG-8018CE 4.9152M-TJHSA0_SG-8018CE 4.9152M-TJHSA0.ipt  SG-8018CE 40.0000M-TJHPA3 v1.iam  XRCGB25M000FAM10R0 v3.ipt  raspi_ai_cam_module v1.ipt  raspi_ai_cam_pcb v2.ipt  raspicam_ai_assy.iam
CAD/coupling/: Guzhon(Mirror).ipt  Guzhon.ipt  (+2 more)
KNIGHTS mobile platform CAD files/: Knights Mobile platform design.iam  Top plate.ipt  all_parts.idw  baseplate.ipt  caster wheel mounter.ipt  casterholderA.ipt  custom standoffs.ipt  inner motorholder1A.ipt  inner motorholder1A.stp  lidar mounting plate.ipt  make the motor holes bigger, 25 mm or 26mm.txt  midPlate.ipt  motor chasis holder.ipt  motor chasis holder.stp  motorchassisholder2Ass.iam  motorholder1A.ipt  motorholder1A.stp
Map-Evaluation/: README.md  map_evaluation.py
pi-code/: .gitignore  frames_2025-09-13_22.06.26.gv  frames_2025-09-13_22.33.39.gv  frames_2025-09-16_00.50.04.gv  m4.data  m4.pgm  m4.yaml  p.data  p.pgm  p.yaml
pi-code/src/jie_ware/: CMakeLists.txt  README.md  package.xml
pi-code/src/jie_ware/launch/: amcl_test.launch.py  lidar_loc.launch.py
pi-code/src/jie_ware/src/: costmap_cleaner.cpp  lidar_filter_node.cpp  lidar_loc.cpp
(+402 files in other folders)
